--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tsumqma",
+  "name": "four-round-quiz",
   "version": "1.0.0",
-  "description": "ツムツムとQMAを融合させた教育アプリ",
+  "description": "4ラウンド（各5問）クイズWebアプリ",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,9 +13,17 @@
     "education",
     "quiz"
   ],
-  "author": "三田",
+  "author": "Quiz Team",
   "license": "MIT",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "devDependencies": {
-    "vite": "^7.3.0"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.8"
   }
 }
